# RG-Projekat-Novi

./: .gitignore  CMakeLists.txt  README.md  assimp_test.cpp  main.cpp  main.hpp
Data/: BasicShader.glsl
Data/models/: cube.mtl  sponza.mtl
Data/shaders/: BasicShader.glsl  DRGeometry.frag  DRGeometry.glsl  DRGeometry.vert  DRLighting.frag  DRLighting.glsl  DRLighting.vert  DepthOnly.frag  DepthOnly.vert  LightCube.glsl  RSM.frag
glad/include/glad/: glad.h
glad/src/: glad.c
